--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O3A-5f-D7f">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="EUn-1V-UbN">
+            <objects>
+                <viewController id="BHN-zv-e0f" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pmF-cz-fd8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Your Favorite Picture" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYH-z4-Sy0">
+                                <rect key="frame" x="55" y="403" width="304" height="72"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vap-eR-axF">
+                                <rect key="frame" x="55" y="505" width="304" height="38"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Enter">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="G3Y-C7-xlv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1ga-Nb-BhZ"/>
+                        <color key="backgroundColor" red="0.78109922432944501" green="0.80204099538181772" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="vYH-z4-Sy0" firstAttribute="leading" secondItem="1ga-Nb-BhZ" secondAttribute="leading" constant="55" id="AJx-NP-ldv"/>
+                            <constraint firstItem="vap-eR-axF" firstAttribute="leading" secondItem="1ga-Nb-BhZ" secondAttribute="leading" constant="55" id="COw-Lk-VEn"/>
+                            <constraint firstItem="1ga-Nb-BhZ" firstAttribute="trailing" secondItem="vap-eR-axF" secondAttribute="trailing" constant="55" id="UM8-Yd-BE4"/>
+                            <constraint firstItem="vYH-z4-Sy0" firstAttribute="top" secondItem="1ga-Nb-BhZ" secondAttribute="top" constant="315" id="a1K-U4-JAx"/>
+                            <constraint firstItem="vap-eR-axF" firstAttribute="top" secondItem="vYH-z4-Sy0" secondAttribute="bottom" constant="30" id="lLz-VS-MXH"/>
+                            <constraint firstItem="1ga-Nb-BhZ" firstAttribute="trailing" secondItem="vYH-z4-Sy0" secondAttribute="trailing" constant="55" id="w9v-38-5WN"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="uvw-UZ-cmr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Q8-lk-8Mh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="502.89855072463774" y="108.48214285714285"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -15,18 +58,86 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Favorite Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4y-cA-e4g">
+                                <rect key="frame" x="20" y="138" width="374" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U0h-bx-8B5">
+                                <rect key="frame" x="20" y="183" width="374" height="334"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="334" id="Mt7-2t-z2m"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48D-8r-I8R">
+                                <rect key="frame" x="20" y="642" width="148" height="38"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Choose Photo">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iX0-H0-7qc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FW9-Oe-j8e">
+                                <rect key="frame" x="248" y="642" width="146" height="38"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Open Camera">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="66e-Uu-EDd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.78109922430000001" green="0.80204099539999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="48D-8r-I8R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1Em-zO-fIx"/>
+                            <constraint firstItem="U0h-bx-8B5" firstAttribute="top" secondItem="J4y-cA-e4g" secondAttribute="bottom" constant="8" symbolic="YES" id="35W-Mh-fiN"/>
+                            <constraint firstItem="U0h-bx-8B5" firstAttribute="leading" secondItem="J4y-cA-e4g" secondAttribute="leading" id="43a-hr-VdG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FW9-Oe-j8e" secondAttribute="trailing" constant="20" id="74f-AM-0tU"/>
+                            <constraint firstItem="J4y-cA-e4g" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="8dp-FX-5T0"/>
+                            <constraint firstItem="J4y-cA-e4g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BTu-4B-pMR"/>
+                            <constraint firstItem="U0h-bx-8B5" firstAttribute="trailing" secondItem="J4y-cA-e4g" secondAttribute="trailing" id="JFQ-xL-rUu"/>
+                            <constraint firstItem="FW9-Oe-j8e" firstAttribute="top" secondItem="U0h-bx-8B5" secondAttribute="bottom" constant="125" id="Nfc-qO-adG"/>
+                            <constraint firstItem="48D-8r-I8R" firstAttribute="top" secondItem="U0h-bx-8B5" secondAttribute="bottom" constant="125" id="YP2-82-4Rd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J4y-cA-e4g" secondAttribute="trailing" constant="20" id="jw1-x3-rRH"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MkS-0i-o30"/>
+                    <connections>
+                        <outlet property="myImageView" destination="U0h-bx-8B5" id="ciK-6T-nRK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
+            <point key="canvasLocation" x="1414" y="108"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="KMM-jY-ZB4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O3A-5f-D7f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dyr-Kb-Xs7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BHN-zv-e0f" kind="relationship" relationship="rootViewController" id="fEr-7O-vyV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kdg-zJ-pPB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-407.24637681159425" y="108.48214285714285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
