--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -15,9 +15,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Your Favorite Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HwI-Sz-zeY">
+                                <rect key="frame" x="81" y="110" width="155" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M5a-aQ-oyi">
+                                <rect key="frame" x="10" y="193" width="384" height="201"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="201" id="ek7-Oh-pdT"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ix9-lX-qcs">
+                                <rect key="frame" x="58" y="455" width="113" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="choose photo"/>
+                                <connections>
+                                    <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AXo-at-W1n"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZr-yO-wr6">
+                                <rect key="frame" x="231" y="455" width="113" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Open Camera"/>
+                                <connections>
+                                    <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Doj-D1-2jm"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HwI-Sz-zeY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="81" id="Bj8-Yg-CRM"/>
+                            <constraint firstItem="GZr-yO-wr6" firstAttribute="top" secondItem="M5a-aQ-oyi" secondAttribute="bottom" constant="61" id="GuQ-3E-bS6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="M5a-aQ-oyi" secondAttribute="trailing" constant="20" id="LXs-nI-fqV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GZr-yO-wr6" secondAttribute="trailing" constant="70" id="Lw9-mS-nNG"/>
+                            <constraint firstItem="ix9-lX-qcs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="bnV-y3-azC"/>
+                            <constraint firstItem="HwI-Sz-zeY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="66" id="jbE-Hh-Q1e"/>
+                            <constraint firstItem="ix9-lX-qcs" firstAttribute="top" secondItem="M5a-aQ-oyi" secondAttribute="bottom" constant="61" id="kv4-Fl-cQ6"/>
+                            <constraint firstItem="M5a-aQ-oyi" firstAttribute="top" secondItem="HwI-Sz-zeY" secondAttribute="bottom" constant="62" id="soH-n7-Go5"/>
+                            <constraint firstItem="M5a-aQ-oyi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="uBx-Pk-82Y"/>
+                            <constraint firstItem="M5a-aQ-oyi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="uVU-Rr-1ol"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="M5a-aQ-oyi" id="Djc-1s-q5M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
