--- a/Camera_PhotoLibrary/Base.lproj/Main.storyboard
+++ b/Camera_PhotoLibrary/Base.lproj/Main.storyboard
@@ -15,9 +15,53 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Favorite Image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpm-2h-F2y">
+                                <rect key="frame" x="20" y="91" width="212" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zam-Fb-tzs">
+                                <rect key="frame" x="22" y="433" width="113" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="choose photo"/>
+                                <connections>
+                                    <action selector="OpenPhotosLibrary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kWC-ba-PCl"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tdz-Vm-uA7">
+                                <rect key="frame" x="271" y="433" width="113" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Open Camera"/>
+                                <connections>
+                                    <action selector="OpenCam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hwg-Ig-0lT"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PQt-XS-USk">
+                                <rect key="frame" x="43" y="154" width="329" height="222"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="222" id="69a-qL-T2E"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Tdz-Vm-uA7" firstAttribute="top" secondItem="PQt-XS-USk" secondAttribute="bottom" constant="57" id="DBO-6q-Y5t"/>
+                            <constraint firstItem="PQt-XS-USk" firstAttribute="top" secondItem="bpm-2h-F2y" secondAttribute="bottom" constant="33" id="Hlo-LE-BEz"/>
+                            <constraint firstItem="bpm-2h-F2y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MzJ-Ip-RCD"/>
+                            <constraint firstItem="zam-Fb-tzs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="22" id="UGg-n4-1X9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tdz-Vm-uA7" secondAttribute="trailing" constant="30" id="VLZ-Vl-okj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PQt-XS-USk" secondAttribute="trailing" constant="42" id="dhU-KX-VOR"/>
+                            <constraint firstItem="PQt-XS-USk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="epp-2q-fD2"/>
+                            <constraint firstItem="bpm-2h-F2y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="47" id="oHJ-84-2s0"/>
+                            <constraint firstItem="zam-Fb-tzs" firstAttribute="top" secondItem="PQt-XS-USk" secondAttribute="bottom" constant="57" id="pnE-EH-lTC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myImageView" destination="PQt-XS-USk" id="VRr-xt-rgk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
